updated release pipeline to build the new metapackage
Signed-off-by: gabrik <gabriele.baldoni@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -263,6 +263,7 @@ jobs:
         shell: bash
         run: |
           equivs-build zenoh-flow-python-extension
+          equivs-build zenoh-flow-python-extension-plugin
 
       - name: Packaging
         id: package
