fix ci to explicitely install clippy
Signed-off-by: gabrik <gabriele.baldoni@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,9 +33,7 @@ jobs:
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
-          profile: minimal
-          default: true
+          components: rustfmt, clippy
 
       - name: Clippy check
         uses: actions-rs/cargo@v1
