--- a/zenoh-flow-python-commons/Cargo.toml
+++ b/zenoh-flow-python-commons/Cargo.toml
@@ -14,7 +14,7 @@
 
 [package]
 name = "zenoh-flow-python-commons"
-version = "0.4.0-alpha.1"
+version = "0.5.0-dev"
 authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
 categories = ["network-programming", "api-bindings"]
 description = "Zenoh-Flow Python common types and utility functions."
@@ -32,7 +32,7 @@ pyo3 = "0.16"
 pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
 uhlc = "0.5"
 uuid = "1.1"
-zenoh-flow =  "=0.4.0-alpha.1"
+zenoh-flow =  "=0.5.0-dev"
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
 default = ["abi-py37"]
