--- a/zenoh-flow-python/Cargo.toml
+++ b/zenoh-flow-python/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "zenoh-flow-python"
-version = "0.4.0-alpha.1"
+version = "0.5.0-dev"
 authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
 categories = ["network-programming", "api-bindings"]
 description = "Zenoh-Flow  Python APIs"
@@ -13,7 +13,7 @@ repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
 
 [dependencies]
 pyo3 = "0.16"
-zenoh-flow-python-commons = { version =  "=0.4.0-alpha.1", path = "../zenoh-flow-python-commons/" }
+zenoh-flow-python-commons = { version =  "=0.5.0-dev", path = "../zenoh-flow-python-commons/" }
 
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
