--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -146,39 +146,40 @@ jobs:
           name: wheels
           path: dist
 
-  linux-armv6-python:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: "3.7"
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          components: rustfmt, clippy
-          target: arm-unknown-linux-gnueabihf
-          default: true
-      - name: install cross toolchain
-        run: |
-          brew tap messense/macos-cross-toolchains
-          brew install arm-unknown-linux-gnueabihf
+  # disabled because of rust-toolchain installation failing
+  # linux-armv6-python:
+  #   runs-on: macos-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-python@v2
+  #       with:
+  #         python-version: "3.7"
+  #     - name: Install Rust toolchain
+  #       uses: actions-rs/toolchain@v1
+  #       with:
+  #         components: rustfmt, clippy
+  #         target: arm-unknown-linux-gnueabihf
+  #         default: true
+  #     - name: install cross toolchain
+  #       run: |
+  #         brew tap messense/macos-cross-toolchains
+  #         brew install arm-unknown-linux-gnueabihf
 
-          export CC_arm_unknown_linux_gnueabihf=arm-unknown-linux-gnueabihf-gcc
-          export CXX_arm_unknown_linux_gnueabihf=arm-unknown-linux-gnueabihf-g++
-          export AR_arm_unknown_linux_gnueabihf=arm-unknown-linux-gnueabihf-ar
-          export CARGO_TARGET_ARM_UNKNOWN_LINUX_GNUEABIHF_LINKER=arm-unknown-linux-gnueabihf-gcc
+  #         export CC_arm_unknown_linux_gnueabihf=arm-unknown-linux-gnueabihf-gcc
+  #         export CXX_arm_unknown_linux_gnueabihf=arm-unknown-linux-gnueabihf-g++
+  #         export AR_arm_unknown_linux_gnueabihf=arm-unknown-linux-gnueabihf-ar
+  #         export CARGO_TARGET_ARM_UNKNOWN_LINUX_GNUEABIHF_LINKER=arm-unknown-linux-gnueabihf-gcc
 
-          pip3 install maturin
-          maturin build --release --target arm-unknown-linux-gnueabihf --out dist -m zenoh-flow-python/Cargo.toml
-      - name: Upload wheels
-        uses: actions/upload-artifact@v2
-        with:
-          name: wheels
-          path: dists
+  #         pip3 install maturin
+  #         maturin build --release --target arm-unknown-linux-gnueabihf --out dist -m zenoh-flow-python/Cargo.toml
+  #     - name: Upload wheels
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: wheels
+  #         path: dists
 
   deploy-wheels:
-    needs: [macos-python, linux-python, linux-cross-python, linux-armv6-python]
+    needs: [macos-python, linux-python, linux-cross-python]
     name: deploy wheels to pypi
     runs-on: ubuntu-latest
     steps:
