--- a/zenoh-flow-python-commons/Cargo.toml
+++ b/zenoh-flow-python-commons/Cargo.toml
@@ -14,7 +14,7 @@
 
 [package]
 name = "zenoh-flow-python-commons"
-version = "0.5.0-dev"
+version = "0.5.0-alpha.1"
 authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
 categories = ["network-programming", "api-bindings"]
 description = "Zenoh-Flow Python common types and utility functions."
@@ -25,14 +25,15 @@ readme = "README.md"
 repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
 
 [dependencies]
-async-std = { version = "=1.12.0", features = ["attributes"] }
+async-std = { workspace = true }
 flume = "0.10"
-log = "0.4"
-pyo3 = "0.16"
-pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
+log = { workspace = true }
+pyo3 = { workspace = true }
+pyo3-asyncio = { workspace = true }
 uhlc = "0.5"
 uuid = "1.1"
-zenoh-flow =  "=0.5.0-dev"
+zenoh-flow = { workspace = true }
+
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
 default = ["abi-py37"]
