--- a/zenoh-flow-python-operator-wrapper/Cargo.toml
+++ b/zenoh-flow-python-operator-wrapper/Cargo.toml
@@ -14,7 +14,7 @@
 
 [package]
 name = "zenoh-flow-python-operator-wrapper"
-version = "0.5.0-dev"
+version = "0.5.0-alpha.1"
 authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
 categories = ["network-programming"]
 description = "Zenoh-Flow Python Operator wrapper"
@@ -25,16 +25,16 @@ readme = "README.md"
 repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
 
 [dependencies]
-async-trait = "0.1"
-libloading = "0.7"
-log = "0.4"
-pyo3 = "0.16"
-pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
-zenoh-flow = "=0.5.0-dev"
-zenoh-flow-python-commons = { version =  "=0.5.0-dev", path = "../zenoh-flow-python-commons/" }
+async-trait = { workspace = true }
+libloading = { workspace = true }
+log = { workspace = true }
+pyo3 = { workspace = true }
+pyo3-asyncio = { workspace = true }
+zenoh-flow = { workspace = true }
+zenoh-flow-python-commons = { version =  "0.5.0-alpha.1", path = "../zenoh-flow-python-commons/" }
 
 [build-dependencies]
-pyo3-build-config = { version = "0.17", features = ["resolve-config"] }
+pyo3-build-config = { workspace = true }
 
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
