--- a/zenoh-flow-python/Cargo.toml
+++ b/zenoh-flow-python/Cargo.toml
@@ -1,6 +1,20 @@
+#
+# Copyright (c) 2022 ZettaScale Technology
+#
+# This program and the accompanying materials are made available under the
+# terms of the Eclipse Public License 2.0 which is available at
+# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
+# which is available at https://www.apache.org/licenses/LICENSE-2.0.
+#
+# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
+#
+# Contributors:
+#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
+#
+
 [package]
 name = "zenoh-flow-python"
-version = "0.5.0-dev"
+version = "0.5.0-alpha.1"
 authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
 categories = ["network-programming", "api-bindings"]
 description = "Zenoh-Flow  Python APIs"
@@ -12,8 +26,8 @@ repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
 
 
 [dependencies]
-pyo3 = "0.16"
-zenoh-flow-python-commons = { version =  "=0.5.0-dev", path = "../zenoh-flow-python-commons/" }
+pyo3 = { workspace = true }
+zenoh-flow-python-commons = { version =  "0.5.0-alpha.1", path = "../zenoh-flow-python-commons/" }
 
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
