--- a/zenoh-flow-python-source-wrapper/Cargo.toml
+++ b/zenoh-flow-python-source-wrapper/Cargo.toml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2022 ZettaScale Technology
+# Copyright (c) 2021 - 2023 ZettaScale Technology
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0 which is available at
@@ -13,16 +13,16 @@
 #
 
 [package]
-name = "zenoh-flow-python-source-wrapper"
-version = "0.5.0-alpha.1"
-authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
-categories = ["network-programming"]
+authors.workspace = true
+categories.workspace = true
 description = "Zenoh-Flow Python Source wrapper"
-edition = "2018"
-homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
-license = " EPL-2.0 OR Apache-2.0"
-readme = "README.md"
-repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
+name = "zenoh-flow-python-source-wrapper"
+readme.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [dependencies]
 async-trait = { workspace = true }
@@ -31,7 +31,7 @@ log = { workspace = true }
 pyo3 = { workspace = true }
 pyo3-asyncio = { workspace = true }
 zenoh-flow = { workspace = true }
-zenoh-flow-python-commons = { version =  "=0.5.0-alpha.1", path = "../zenoh-flow-python-commons/" }
+zenoh-flow-python-commons = { version = "=0.5.0-alpha.1", path = "../zenoh-flow-python-commons/" }
 
 [build-dependencies]
 pyo3-build-config = { workspace = true }
@@ -41,18 +41,22 @@ abi-py37 = ["pyo3/abi3-py37"]
 default = ["abi-py37"]
 
 [lib]
+crate-type = ["cdylib"]
 name = "zenoh_flow_python_source_wrapper"
-crate-type =["cdylib"]
 path = "src/lib.rs"
 
 [package.metadata.deb]
-name = "zenoh-flow-python-source-wrapper"
-maintainer = "zenoh-dev@eclipse.org"
-copyright = "2017, 2022 ZettaScale Technology Inc."
-section = "libraries"
-license-file = ["../LICENSE", "0"]
-depends = "$auto"
 assets = [
-    # library
-    ["target/release/libzenoh_flow_python_source_wrapper.so", "/var/zenoh-flow/python/libzenoh_flow_python_source_wrapper.so", "644"],
+  # library
+  [
+    "/var/zenoh-flow/python/libzenoh_flow_python_source_wrapper.so",
+    "644",
+    "target/release/libzenoh_flow_python_source_wrapper.so",
+  ],
 ]
+copyright = "2021 - 2023 ZettaScale Technology"
+depends = "$auto"
+license-file = ["../LICENSE", "0"]
+maintainer = "ZettaScale Zenoh Team, <zenoh@zettascale.tech>"
+name = "zenoh-flow-python-source-wrapper"
+section = "libraries"
