--- a/zenoh-flow-python/Cargo.toml
+++ b/zenoh-flow-python/Cargo.toml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2022 ZettaScale Technology
+# Copyright (c) 2021 - 2023 ZettaScale Technology
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0 which is available at
@@ -13,27 +13,26 @@
 #
 
 [package]
+authors.workspace = true
+categories.workspace = true
+description.workspace = true
+edition.workspace = true
+homepage.workspace = true
+license.workspace = true
 name = "zenoh-flow-python"
-version = "0.5.0-alpha.1"
-authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
-categories = ["network-programming", "api-bindings"]
-description = "Zenoh-Flow  Python APIs"
-edition = "2018"
-homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
-license = " EPL-2.0 OR Apache-2.0"
-readme = "README.md"
-repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
-
+readme.workspace = true
+repository.workspace = true
+version.workspace = true
 
 [dependencies]
 pyo3 = { workspace = true }
-zenoh-flow-python-commons = { version =  "0.5.0-alpha.1", path = "../zenoh-flow-python-commons/" }
+zenoh-flow-python-commons = { version = "0.5.0-alpha.1", path = "../zenoh-flow-python-commons/" }
 
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
+default = ["abi-py37", "extension-module"]
 extension-module = ["pyo3/extension-module"]
-default = ["extension-module", "abi-py37"]
 
 [lib]
-name = "zenoh_flow"
 crate-type = ["cdylib"]
+name = "zenoh_flow"
