poc: update entire crate to Zenoh-Flow O.6.0-alpha
This is really of a proof of concept for the needs of an internal
demonstration.

The entire code base needs to be updated to the latest version of pyo3
to benefit from their latest enhancements.

Additionally, the internal logic to fetch the location of the python
script to be executed should be changed. An initial thought would be to
leverage the `Context` structure, add a new field that gives the
`PathBuf` of the library, and use it in the constructor.

Signed-off-by: Julien Loudet <julien.loudet@zettascale.tech>

--- a/zenoh-flow-python-sink-wrapper/Cargo.toml
+++ b/zenoh-flow-python-sink-wrapper/Cargo.toml
@@ -25,12 +25,13 @@ readme = "README.md"
 repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
 
 [dependencies]
+anyhow = { workspace = true }
 async-trait = { workspace = true }
 libloading = { workspace = true }
 log = { workspace = true }
 pyo3 = { workspace = true }
 pyo3-asyncio = { workspace = true }
-zenoh-flow = { workspace = true }
+zenoh-flow-nodes = { workspace = true }
 zenoh-flow-python-commons = { version =  "0.5.0-alpha.1", path = "../zenoh-flow-python-commons/" }
 
 [build-dependencies]
