--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@
 #
 
 [workspace]
-
 members = [
   "zenoh-flow-python-operator-wrapper",
   "zenoh-flow-python-sink-wrapper",
@@ -34,6 +33,7 @@ opt-level = 3
 panic = "abort"
 
 [workspace.dependencies]
+anyhow = "1"
 async-std = { version = "=1.12.0", features = ["attributes"] }
 async-trait = "0.1"
 libloading = "0.7"
@@ -41,4 +41,7 @@ log = "0.4"
 pyo3 = "0.16"
 pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
 pyo3-build-config = { version = "0.16", features = ["resolve-config"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
 zenoh-flow = { version = "0.5.0-alpha.1" }
+zenoh-flow-nodes = { path = "../zenoh-flow/zenoh-flow-nodes" }
