--- a/zenoh-flow-python-commons/Cargo.toml
+++ b/zenoh-flow-python-commons/Cargo.toml
@@ -25,14 +25,16 @@ readme = "README.md"
 repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
 
 [dependencies]
+anyhow = "1"
 async-std = { workspace = true }
 flume = "0.10"
 log = { workspace = true }
 pyo3 = { workspace = true }
 pyo3-asyncio = { workspace = true }
+serde_json = "1"
 uhlc = "0.5"
 uuid = "1.1"
-zenoh-flow = { workspace = true }
+zenoh-flow-nodes = { workspace = true }
 
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
