--- a/zenoh-flow-python/Cargo.toml
+++ b/zenoh-flow-python/Cargo.toml
@@ -27,7 +27,7 @@ repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
 
 [dependencies]
 pyo3 = { workspace = true }
-zenoh-flow-python-commons = { version =  "0.5.0-alpha.1", path = "../zenoh-flow-python-commons/" }
+zenoh-flow-python-commons = { path = "../zenoh-flow-python-commons/" }
 
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
