--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,11 +34,14 @@ opt-level = 3
 panic = "abort"
 
 [workspace.dependencies]
+anyhow = "1"
 async-std = { version = "=1.12.0", features = ["attributes"] }
 async-trait = "0.1"
 libloading = "0.7"
-log = "0.4"
 pyo3 = "0.16"
 pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
 pyo3-build-config = { version = "0.16", features = ["resolve-config"] }
-zenoh-flow = { version = "0.5.0-alpha.1" }
+serde_json = "1"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+zenoh-flow-nodes = { path = "../zenoh-flow/zenoh-flow-nodes" }
