--- a/zenoh-flow-python/pyproject.toml
+++ b/zenoh-flow-python/pyproject.toml
@@ -1,6 +1,6 @@
 #
 #
-# Copyright (c) 2022 ZettaScale Technology
+# Copyright © 2022 ZettaScale Technology
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0 which is available at
@@ -12,34 +12,38 @@
 # Contributors:
 #   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
 #
-#
 
 [build-system]
-requires = ["maturin>=0.12,<0.13"]
+requires = ["maturin>=1.5,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "eclipse-zenoh-flow"
-description = "The python API for Eclipse Zenoh Flow"
-requires-python = ">=3.7"
 author = "ZettaScale Zenoh team"
 author_email = "zenoh@zettascale.tech"
 classifiers = [
-        "Programming Language :: Python :: 3 :: Only",
-        "Programming Language :: Python :: 3.7",
-        "Programming Language :: Python :: 3.8",
-        "Programming Language :: Python :: 3.9",
-        "Programming Language :: Python :: 3.10",
-        "Intended Audience :: Developers",
-        "Development Status :: 3 - Alpha",
-        "License :: OSI Approved :: Apache Software License",
-        "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
-        "Operating System :: POSIX :: Linux",
-        "Operating System :: MacOS :: MacOS X",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Rust",
+    "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python :: Implementation :: PyPy",
+    "Intended Audience :: Developers",
+    "Development Status :: 3 - Alpha",
+    "License :: OSI Approved :: Apache Software License",
+    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
+    "Operating System :: POSIX :: Linux",
+    "Operating System :: MacOS :: MacOS X",
 ]
-zip_safe = false
+description = "Eclipse Zenoh-Flow Python bindings."
+dynamic = ["version"]
+name = "zenoh-flow-python"
+requires-python = ">=3.8"
+
+[tool.maturin]
+features = ["pyo3/extension-module"]
 
 [project.urls]
-"Bug Tracker" = "https://github.com/ZettaScaleLabs/zenoh-flow-python/issues"
-"Source Code" = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
-"Documentation" = "https://readthedocs.org/projects/zenoh-flow/"
+"Bug Tracker" = "https://github.com/eclipse-zenoh-flow/zenoh-flow-python/issues"
+"Source Code" = "https://github.com/eclipse-zenoh-flow/zenoh-flow-python"
