--- a/zenoh-flow-python-source-wrapper/Cargo.toml
+++ b/zenoh-flow-python-source-wrapper/Cargo.toml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2022 ZettaScale Technology
+# Copyright © 2022 ZettaScale Technology
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0 which is available at
@@ -13,46 +13,25 @@
 #
 
 [package]
+authors = { workspace = true }
+categories = { workspace = true }
+description = "Python wrapper for a Zenoh-Flow Source node."
+edition = { workspace = true }
+homepage = { workspace = true }
+license = { workspace = true }
 name = "zenoh-flow-python-source-wrapper"
-version = "0.5.0-alpha.1"
-authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
-categories = ["network-programming"]
-description = "Zenoh-Flow Python Source wrapper"
-edition = "2018"
-homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
-license = " EPL-2.0 OR Apache-2.0"
-readme = "README.md"
-repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
+repository = { workspace = true }
+version = { workspace = true }
 
 [dependencies]
-async-trait = { workspace = true }
-libloading = { workspace = true }
-log = { workspace = true }
-pyo3 = { workspace = true }
-pyo3-asyncio = { workspace = true }
-zenoh-flow = { workspace = true }
-zenoh-flow-python-commons = { version =  "=0.5.0-alpha.1", path = "../zenoh-flow-python-commons/" }
-
-[build-dependencies]
-pyo3-build-config = { workspace = true }
-
-[features]
-abi-py37 = ["pyo3/abi3-py37"]
-default = ["abi-py37"]
+async-trait.workspace = true
+pyo3.workspace = true
+pyo3-asyncio.workspace = true
+pyo3-pylogger.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+zenoh-flow-python.workspace = true
+zenoh-flow-nodes.workspace = true
 
 [lib]
-name = "zenoh_flow_python_source_wrapper"
-crate-type =["cdylib"]
-path = "src/lib.rs"
-
-[package.metadata.deb]
-name = "zenoh-flow-python-source-wrapper"
-maintainer = "zenoh-dev@eclipse.org"
-copyright = "2017, 2022 ZettaScale Technology Inc."
-section = "libraries"
-license-file = ["../LICENSE", "0"]
-depends = "$auto"
-assets = [
-    # library
-    ["target/release/libzenoh_flow_python_source_wrapper.so", "/var/zenoh-flow/python/libzenoh_flow_python_source_wrapper.so", "644"],
-]
+crate-type = ["cdylib"]
