--- a/zenoh-flow-python/Cargo.toml
+++ b/zenoh-flow-python/Cargo.toml
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2022 ZettaScale Technology
+# Copyright © 2022 ZettaScale Technology
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Public License 2.0 which is available at
@@ -13,27 +13,27 @@
 #
 
 [package]
+authors = { workspace = true }
+categories = { workspace = true }
+description = "Zenoh-Flow Python bindings core library."
+edition = { workspace = true }
+homepage = { workspace = true }
+license = { workspace = true }
 name = "zenoh-flow-python"
-version = "0.5.0-alpha.1"
-authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
-categories = ["network-programming", "api-bindings"]
-description = "Zenoh-Flow  Python APIs"
-edition = "2018"
-homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
-license = " EPL-2.0 OR Apache-2.0"
-readme = "README.md"
-repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
-
+repository = { workspace = true }
+version = { workspace = true }
 
 [dependencies]
+anyhow = { workspace = true }
 pyo3 = { workspace = true }
-zenoh-flow-python-commons = { version =  "0.5.0-alpha.1", path = "../zenoh-flow-python-commons/" }
+pyo3-asyncio = { workspace = true }
+serde_json = { workspace = true }
+tracing.workspace = true
+zenoh-flow-nodes = { workspace = true }
 
 [features]
-abi-py37 = ["pyo3/abi3-py37"]
 extension-module = ["pyo3/extension-module"]
-default = ["extension-module", "abi-py37"]
 
 [lib]
-name = "zenoh_flow"
-crate-type = ["cdylib"]
+name = "zenoh_flow_python"
+crate-type = ["cdylib", "rlib"]
